fix: bad scrollbar behaviour on nb-card-body

--- a/apps/gauzy/src/app/pages/invoices/invoices.component.scss
+++ b/apps/gauzy/src/app/pages/invoices/invoices.component.scss
@@ -257,3 +257,7 @@ input {
   background: transparent;
   width: 100%;
 }
+
+nb-card-body{
+  overflow: unset;
+}
